Build self-policing: SpotBugs gate + JaCoCo, and fix what it caught
Adds SpotBugs to mvn verify (correctness-focused exclude filter at
config/spotbugs-exclude.xml) and JaCoCo coverage reports. CI's
`mvn -B verify` now gates on static analysis automatically. Error Prone
was skipped deliberately: it hooks javac and would conflict with the
load-bearing -proc:full annotation processing; SpotBugs is bytecode-based.

Real defects it surfaced, now fixed:
- BuildTaskManager.getInstance(): unsynchronised lazy-init race -> synchronized
- 4x ignored File.mkdirs() -> Files.createDirectories (surfaces failure)
- 2x dead copy-paste ternary in DeployPlanner (identical branches) -> collapsed
- RackPresets: no-op getPort() call removed
- DatabaseDevice: missing switch defaults added

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>